--- a/app/src/main/res/drawable/keyboard_background.xml
+++ b/app/src/main/res/drawable/keyboard_background.xml
@@ -3,6 +3,6 @@
     <gradient
         android:angle="135"
         android:centerColor="@color/colorAccent"
-        android:startColor="@color/colorPrimaryDark"
+        android:startColor="@color/colorPrimary"
         android:type="linear" />
 </shape>
