--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -142,14 +142,13 @@
         android:id="@+id/txt_amount"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
         android:text="0"
         android:textAlignment="center"
         android:textColor="?android:textColorPrimary"
         android:textSize="@dimen/normal_text_size"
         app:layout_constraintBottom_toBottomOf="@+id/txt_measure_unit"
-        app:layout_constraintEnd_toStartOf="@+id/txt_measure_unit"
-        app:layout_constraintStart_toEndOf="@+id/divider"
+        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
         tools:text="12345" />
 
     <TextView
