--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
         android:id="@+id/horizontal_divider"
         android:layout_width="match_parent"
         android:layout_height="2dp"
+        android:layout_marginBottom="2dp"
         android:background="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/divider"
         app:layout_constraintEnd_toEndOf="parent"
@@ -146,6 +147,9 @@
         android:textAlignment="center"
         android:textColor="?android:textColorPrimary"
         android:textSize="@dimen/normal_text_size"
+        android:clickable="true"
+        android:focusable="true"
+        android:background="?android:attr/selectableItemBackground"
         app:layout_constraintBottom_toBottomOf="@+id/txt_measure_unit"
         app:layout_constraintEnd_toEndOf="@+id/tableLayout"
         app:layout_constraintStart_toStartOf="@+id/guideline"
@@ -163,13 +167,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="0"
-        android:textAlignment="center"
-        android:textColor="?android:textColorPrimary"
-        android:textSize="@dimen/normal_text_size"
         app:layout_constraintBottom_toBottomOf="@+id/txt_currency"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintStart_toStartOf="@+id/tableLayout"
-        tools:text="12345" />
+        tools:text="12345"
+        style="@style/price_and_amount_style" />
 
     <TextView
         android:id="@+id/txt_currency"
