--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -8,4 +8,12 @@
         android:orderInCategory="100"
         app:showAsAction="never"
         />
+
+    <item
+        android:id="@+id/action_about"
+        android:title="@string/action_about"
+        android:orderInCategory="200"
+        app:showAsAction="never"
+        />
+
 </menu>
