--- a/app/src/main/res/drawable/keyboard_background.xml
+++ b/app/src/main/res/drawable/keyboard_background.xml
@@ -1,9 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="135"
-        android:centerColor="@color/colorAccent"
-        android:startColor="@color/colorAccentDark"
-        android:endColor="@color/colorAccentLight"
+        android:angle="90"
+        android:startColor="#000000"
+        android:endColor="#C4FFFFFF"
         android:type="linear" />
 </shape>
