--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/keyboard_background"
+    android:background="@color/colorBackgroundMain"
     tools:context=".ui.MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -16,33 +16,40 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@+id/horizontal_divider"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/product_item"
-        />
+        app:layout_constraintVertical_bias="0.0"
+        tools:listitem="@layout/product_item" />
 
     <View
         android:id="@+id/horizontal_divider"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginBottom="8dp"
         android:background="@color/colorAccent"
-        app:layout_constraintBottom_toTopOf="@+id/divider"
+        app:layout_constraintBottom_toTopOf="@+id/txt_price"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TableLayout
-        android:id="@+id/tableLayout"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linear_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <TableRow
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btn_1"
@@ -64,11 +71,12 @@
                 style="@style/button_style"
                 android:text="Unt" />
 
-        </TableRow>
+        </LinearLayout>
 
-        <TableRow
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btn_4"
@@ -89,11 +97,13 @@
                 android:id="@+id/btn_clean"
                 style="@style/button_style"
                 android:text="CLr" />
-        </TableRow>
 
-        <TableRow
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btn_7"
@@ -115,11 +125,12 @@
                 style="@style/button_style"
                 android:text="OK" />
 
-        </TableRow>
+        </LinearLayout>
 
-        <TableRow
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btn_dot"
@@ -136,51 +147,39 @@
                 style="@style/button_style"
                 app:srcCompat="@drawable/ic_backspace" />
 
-        </TableRow>
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
 
-    </TableLayout>
 
-    <TextView
-        android:id="@+id/txt_amount"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="0"
-        android:textAlignment="center"
-        android:textColor="?android:textColorPrimary"
-        android:textSize="@dimen/normal_text_size"
-        android:clickable="true"
-        android:focusable="true"
-        android:background="?android:attr/selectableItemBackground"
-        app:layout_constraintBottom_toBottomOf="@+id/txt_measure_unit"
-        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        tools:text="12345" />
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/txt_measure_unit"
-        style="@style/text_style"
-        android:text="@string/gram"
-        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
-        app:layout_constraintEnd_toEndOf="@+id/tableLayout" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/txt_price"
         style="@style/price_and_amount_style"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif"
+        android:layout_height="@dimen/value_txt_height"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/selected_txt_back"
+        android:gravity="center"
         android:text="0"
-        app:layout_constraintBottom_toBottomOf="@+id/txt_currency"
+        app:layout_constraintBottom_toTopOf="@+id/linear_layout"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintStart_toStartOf="@+id/tableLayout"
+        app:layout_constraintStart_toStartOf="@+id/linear_layout"
         tools:text="12345" />
 
     <TextView
         android:id="@+id/txt_currency"
         style="@style/text_style"
         android:text="@string/ruble"
-        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
-        app:layout_constraintEnd_toStartOf="@+id/divider" />
+        tools:layout_editor_absoluteX="125dp"
+        tools:layout_editor_absoluteY="306dp" />
 
     <TextView
         android:id="@+id/divider"
@@ -188,9 +187,34 @@
         android:text=" / "
         android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
-        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
-        app:layout_constraintStart_toStartOf="@+id/tableLayout" />
+        tools:layout_editor_absoluteX="244dp"
+        tools:layout_editor_absoluteY="303dp" />
+
+    <TextView
+        android:id="@+id/txt_amount"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/value_txt_height"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:text="0"
+        android:background="@drawable/unselected_txt_back"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:textColor="?android:textColorPrimary"
+        android:textSize="@dimen/normal_text_size"
+        app:layout_constraintEnd_toEndOf="@+id/linear_layout"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toTopOf="@+id/txt_price"
+        tools:text="12345" />
+
+    <TextView
+        android:id="@+id/txt_measure_unit"
+        style="@style/text_style"
+        android:text="@string/gram"
+        tools:layout_editor_absoluteX="331dp"
+        tools:layout_editor_absoluteY="284dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
@@ -208,7 +232,118 @@
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="@+id/recycler_vew"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.49" />
+
+    <!--    <TableLayout-->
+    <!--        android:id="@+id/tableLayout"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginBottom="16dp"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toStartOf="parent">-->
+
+    <!--        <TableRow-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="match_parent">-->
+
+    <!--            <Button-->
+    <!--                android:id="@+id/btn_1"-->
+    <!--                style="@style/button_style"-->
+    <!--                android:text="1" />-->
+
+    <!--            <Button-->
+    <!--                android:id="@+id/btn_2"-->
+    <!--                style="@style/button_style"-->
+    <!--                android:text="2" />-->
+
+    <!--            <Button-->
+    <!--                android:id="@+id/btn_3"-->
+    <!--                style="@style/button_style"-->
+    <!--                android:text="3" />-->
+
+    <!--            <Button-->
+    <!--                android:id="@+id/btn_measure_unit"-->
+    <!--                style="@style/button_style"-->
+    <!--                android:text="Unt" />-->
+
+    <!--        </TableRow>-->
+
+    <!--        <TableRow-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="match_parent">-->
+
+    <!--            <Button-->
+    <!--                android:id="@+id/btn_4"-->
+    <!--                style="@style/button_style"-->
+    <!--                android:text="4" />-->
+
+    <!--            <Button-->
+    <!--                android:id="@+id/btn_5"-->
+    <!--                style="@style/button_style"-->
+    <!--                android:text="5" />-->
+
+    <!--            <Button-->
+    <!--                android:id="@+id/btn_6"-->
+    <!--                style="@style/button_style"-->
+    <!--                android:text="6" />-->
+
+    <!--            <Button-->
+    <!--                android:id="@+id/btn_clean"-->
+    <!--                style="@style/button_style"-->
+    <!--                android:text="CLr" />-->
+    <!--        </TableRow>-->
+
+    <!--        <TableRow-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="match_parent">-->
+
+    <!--            <Button-->
+    <!--                android:id="@+id/btn_7"-->
+    <!--                style="@style/button_style"-->
+    <!--                android:text="7" />-->
+
+    <!--            <Button-->
+    <!--                android:id="@+id/btn_8"-->
+    <!--                style="@style/button_style"-->
+    <!--                android:text="8" />-->
+
+    <!--            <Button-->
+    <!--                android:id="@+id/btn_9"-->
+    <!--                style="@style/button_style"-->
+    <!--                android:text="9" />-->
+
+    <!--            <Button-->
+    <!--                android:id="@+id/btn_ok"-->
+    <!--                style="@style/button_style"-->
+    <!--                android:text="OK" />-->
+
+    <!--        </TableRow>-->
+
+    <!--        <TableRow-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="match_parent">-->
+
+    <!--            <Button-->
+    <!--                android:id="@+id/btn_dot"-->
+    <!--                style="@style/button_style"-->
+    <!--                android:text="." />-->
+
+    <!--            <Button-->
+    <!--                android:id="@+id/btn_0"-->
+    <!--                style="@style/button_style"-->
+    <!--                android:text="0" />-->
+
+    <!--            <ImageButton-->
+    <!--                android:id="@+id/btn_del"-->
+    <!--                style="@style/button_style"-->
+    <!--                app:srcCompat="@drawable/ic_backspace" />-->
+
+    <!--        </TableRow>-->
+
+    <!--    </TableLayout>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
