--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#0b8778</color>
+    <color name="colorPrimaryDark">#00594c</color>
+    <color name="colorPrimaryLight">#50b7a7</color>
+
     <color name="colorAccent">#03DAC5</color>
     <color name="colorAccentDark">#3F5C58</color>
     <color name="colorAccentLight">#519494</color>
 
-    <color name="colorMainBackground">#07FBF3</color>
-    <color name="colorImages">#F0F0F0</color>
+    <color name="colorBackgroundMain">#f3ffff</color>
+    <color name="colorBackgroundCard">#fcfeff</color>
+    <color name="colorImageGood">#07CD65</color>
+    <color name="colorImageBad">#d32d41</color>
+
+    <color name="colorSelectedText">#FFFF8D</color>
+    <color name="colorValueTextBack">#EBFADC</color>
+
 </resources>
