--- a/app/src/main/res/drawable/keyboard_background.xml
+++ b/app/src/main/res/drawable/keyboard_background.xml
@@ -2,7 +2,7 @@
     android:shape="rectangle">
     <gradient
         android:angle="90"
-        android:startColor="#000000"
-        android:endColor="#C4FFFFFF"
+        android:startColor="@color/colorPrimaryLight"
+        android:endColor="@color/colorBackgroundMain"
         android:type="linear" />
 </shape>
