--- a/app/src/main/res/layout/product_item2.xml
+++ b/app/src/main/res/layout/product_item2.xml
@@ -16,27 +16,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/item_number"
-            style="@style/text_style"
-            android:layout_marginStart="16dp"
-
-            android:textSize="@dimen/large_text_size"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/item_cur_price"
-            tools:text="#1" />
+                <TextView
+                    android:id="@+id/item_number"
+                    style="@style/text_style"
+                    android:layout_height="1dp"
+                    android:width="1dp"
+                    android:layout_marginStart="16dp"
+                    android:textSize="@dimen/large_text_size"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/item_cur_price"
+                    tools:text="#1" />
 
         <TextView
             android:id="@+id/item_cur_price"
             style="@style/text_style"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="12dp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/guideline"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/item_number"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="800p./750g" />
 
@@ -44,21 +43,22 @@
             android:id="@+id/item_price_per_one"
             style="@style/text_style"
             android:layout_width="0dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
             app:layout_constraintEnd_toStartOf="@+id/guideline"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/item_cur_price"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/item_cur_price"
             tools:text="1200p./1kg" />
 
         <TextView
             android:id="@+id/item_price_per_half"
             style="@style/text_style"
+
             android:layout_width="0dp"
             app:layout_constraintEnd_toStartOf="@+id/guideline"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/item_cur_price"
+            app:layout_constraintStart_toStartOf="@+id/item_price_per_one"
             app:layout_constraintTop_toBottomOf="@+id/item_price_per_one"
-            tools:text="1200p./1kg" />
+            tools:text="1200p./500g" />
 
         <TextView
             android:id="@+id/item_price_per_one_tenth"
@@ -67,30 +67,28 @@
             android:layout_marginBottom="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/item_cur_price"
+            app:layout_constraintStart_toStartOf="@+id/item_price_per_half"
             app:layout_constraintTop_toBottomOf="@+id/item_price_per_half"
-            app:layout_constraintVertical_bias="0.0"
-            tools:text="1200p./1kg" />
+            tools:text="1200p./100g" />
 
-        <TextView
-            android:id="@+id/item_dif_title"
-            style="@style/text_style"
-            android:layout_marginEnd="16dp"
-            tools:text="@string/item_title_neutral"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/item_cur_price" />
+                <TextView
+                    android:id="@+id/item_dif_title"
+                    style="@style/text_style"
+                    android:layout_marginEnd="16dp"
+                    tools:text="@string/item_title_neutral"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/item_cur_price" />
 
         <TextView
             android:id="@+id/item_dif_per_one"
             style="@style/text_style"
             android:layout_width="0dp"
+            android:layout_marginEnd="16dp"
             android:textAlignment="textEnd"
-            app:layout_constraintEnd_toEndOf="@+id/item_dif_title"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/item_cur_price"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/item_price_per_one"
+            app:layout_constraintTop_toTopOf="@+id/item_price_per_one"
             tools:text="100p." />
 
         <TextView
@@ -99,9 +97,8 @@
             android:layout_width="0dp"
             android:textAlignment="textEnd"
             app:layout_constraintEnd_toEndOf="@+id/item_dif_per_one"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/item_price_per_one"
+            app:layout_constraintStart_toEndOf="@+id/item_price_per_half"
+            app:layout_constraintTop_toTopOf="@+id/item_price_per_half"
             tools:text="100p." />
 
         <TextView
@@ -110,27 +107,23 @@
             android:layout_width="0dp"
             android:textAlignment="textEnd"
             app:layout_constraintEnd_toEndOf="@+id/item_dif_per_half"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/item_price_per_half"
+            app:layout_constraintStart_toEndOf="@+id/item_price_per_one_tenth"
+            app:layout_constraintTop_toTopOf="@+id/item_price_per_one_tenth"
             tools:text="100p." />
 
-        <ImageView
-            android:id="@+id/item_thumb"
-            android:layout_width="47dp"
-            android:layout_height="41dp"
-            android:layout_marginBottom="4dp"
-            app:layout_constraintBottom_toBottomOf="@+id/item_price_per_one_tenth"
-            app:layout_constraintEnd_toEndOf="@+id/item_number"
-            app:layout_constraintStart_toStartOf="@+id/item_number"
-            app:srcCompat="@drawable/ic_thumb_up" />
+                <ImageView
+                    android:id="@+id/item_thumb"
+                    android:layout_width="1dp"
+                    android:layout_height="1dp"
+                    android:layout_marginBottom="4dp"
+                    app:srcCompat="@drawable/ic_thumb_up" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.65" />
+            app:layout_constraintGuide_percent="0.6" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
