--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,8 @@
         <item name="android:layout_height">@dimen/btn_height</item>
         <item name="android:layout_weight">1</item>
         <item name="android:textSize">@dimen/normal_text_size</item>
+        <item name="android:background">@color/colorBackgroundCard</item>
+        <item name="android:layout_margin">2dp</item>
     </style>
 
     <style name="text_style">
