--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/product_item2" />
+        tools:listitem="@layout/product_item" />
 
     <View
         android:id="@+id/horizontal_divider"
@@ -50,22 +50,24 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <Button
+            <TextView
                 android:id="@+id/btn_1"
                 style="@style/button_style"
+                android:clickable="true"
+                android:focusable="true"
                 android:text="1" />
 
-            <Button
+            <TextView
                 android:id="@+id/btn_2"
                 style="@style/button_style"
                 android:text="2" />
 
-            <Button
+            <TextView
                 android:id="@+id/btn_3"
                 style="@style/button_style"
                 android:text="3" />
 
-            <Button
+            <TextView
                 android:id="@+id/btn_measure_unit"
                 style="@style/button_style"
                 android:text="Unt" />
@@ -77,25 +79,25 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <Button
+            <TextView
                 android:id="@+id/btn_4"
                 style="@style/button_style"
                 android:text="4" />
 
-            <Button
+            <TextView
                 android:id="@+id/btn_5"
                 style="@style/button_style"
                 android:text="5" />
 
-            <Button
+            <TextView
                 android:id="@+id/btn_6"
                 style="@style/button_style"
                 android:text="6" />
 
-            <Button
+            <TextView
                 android:id="@+id/btn_clean"
                 style="@style/button_style"
-                android:text="CLr" />
+                android:text="CLR" />
 
         </LinearLayout>
 
@@ -104,22 +106,22 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <Button
+            <TextView
                 android:id="@+id/btn_7"
                 style="@style/button_style"
                 android:text="7" />
 
-            <Button
+            <TextView
                 android:id="@+id/btn_8"
                 style="@style/button_style"
                 android:text="8" />
 
-            <Button
+            <TextView
                 android:id="@+id/btn_9"
                 style="@style/button_style"
                 android:text="9" />
 
-            <Button
+            <TextView
                 android:id="@+id/btn_ok"
                 style="@style/button_style"
                 android:text="OK" />
@@ -131,18 +133,20 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <Button
+            <TextView
                 android:id="@+id/btn_dot"
                 style="@style/button_style"
                 android:text="." />
 
-            <Button
+            <TextView
                 android:id="@+id/btn_0"
                 style="@style/button_style"
                 android:text="0" />
 
-            <ImageButton
+            <ImageView
                 android:id="@+id/btn_del"
+                android:scaleType="center"
+
                 style="@style/button_style"
                 app:srcCompat="@drawable/ic_backspace" />
 
@@ -157,6 +161,132 @@
 
 
     </LinearLayout>
+
+<!--    <LinearLayout-->
+<!--        android:id="@+id/linear_layout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="16dp"-->
+<!--        android:layout_marginEnd="16dp"-->
+<!--        android:layout_marginBottom="16dp"-->
+<!--        android:orientation="vertical"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent">-->
+
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal">-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_1"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="1" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_2"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="2" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_3"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="3" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_measure_unit"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="Unt" />-->
+
+<!--        </LinearLayout>-->
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal">-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_4"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="4" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_5"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="5" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_6"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="6" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_clean"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="CLr" />-->
+
+<!--        </LinearLayout>-->
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal">-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_7"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="7" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_8"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="8" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_9"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="9" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_ok"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="OK" />-->
+
+<!--        </LinearLayout>-->
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal">-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_dot"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="." />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_0"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="0" />-->
+
+<!--            <ImageButton-->
+<!--                android:id="@+id/btn_del"-->
+<!--                style="@style/button_style"-->
+<!--                app:srcCompat="@drawable/ic_backspace" />-->
+
+<!--            <View-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="0dp"-->
+<!--                android:layout_margin="2dp"-->
+<!--                android:layout_weight="1" />-->
+
+
+<!--        </LinearLayout>-->
+
+
+<!--    </LinearLayout>-->
 
     <TextView
         android:id="@+id/txt_price"
@@ -237,113 +367,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.49" />
 
-    <!--    <TableLayout-->
-    <!--        android:id="@+id/tableLayout"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_marginBottom="16dp"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent">-->
 
-    <!--        <TableRow-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="match_parent">-->
-
-    <!--            <Button-->
-    <!--                android:id="@+id/btn_1"-->
-    <!--                style="@style/button_style"-->
-    <!--                android:text="1" />-->
-
-    <!--            <Button-->
-    <!--                android:id="@+id/btn_2"-->
-    <!--                style="@style/button_style"-->
-    <!--                android:text="2" />-->
-
-    <!--            <Button-->
-    <!--                android:id="@+id/btn_3"-->
-    <!--                style="@style/button_style"-->
-    <!--                android:text="3" />-->
-
-    <!--            <Button-->
-    <!--                android:id="@+id/btn_measure_unit"-->
-    <!--                style="@style/button_style"-->
-    <!--                android:text="Unt" />-->
-
-    <!--        </TableRow>-->
-
-    <!--        <TableRow-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="match_parent">-->
-
-    <!--            <Button-->
-    <!--                android:id="@+id/btn_4"-->
-    <!--                style="@style/button_style"-->
-    <!--                android:text="4" />-->
-
-    <!--            <Button-->
-    <!--                android:id="@+id/btn_5"-->
-    <!--                style="@style/button_style"-->
-    <!--                android:text="5" />-->
-
-    <!--            <Button-->
-    <!--                android:id="@+id/btn_6"-->
-    <!--                style="@style/button_style"-->
-    <!--                android:text="6" />-->
-
-    <!--            <Button-->
-    <!--                android:id="@+id/btn_clean"-->
-    <!--                style="@style/button_style"-->
-    <!--                android:text="CLr" />-->
-    <!--        </TableRow>-->
-
-    <!--        <TableRow-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="match_parent">-->
-
-    <!--            <Button-->
-    <!--                android:id="@+id/btn_7"-->
-    <!--                style="@style/button_style"-->
-    <!--                android:text="7" />-->
-
-    <!--            <Button-->
-    <!--                android:id="@+id/btn_8"-->
-    <!--                style="@style/button_style"-->
-    <!--                android:text="8" />-->
-
-    <!--            <Button-->
-    <!--                android:id="@+id/btn_9"-->
-    <!--                style="@style/button_style"-->
-    <!--                android:text="9" />-->
-
-    <!--            <Button-->
-    <!--                android:id="@+id/btn_ok"-->
-    <!--                style="@style/button_style"-->
-    <!--                android:text="OK" />-->
-
-    <!--        </TableRow>-->
-
-    <!--        <TableRow-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="match_parent">-->
-
-    <!--            <Button-->
-    <!--                android:id="@+id/btn_dot"-->
-    <!--                style="@style/button_style"-->
-    <!--                android:text="." />-->
-
-    <!--            <Button-->
-    <!--                android:id="@+id/btn_0"-->
-    <!--                style="@style/button_style"-->
-    <!--                android:text="0" />-->
-
-    <!--            <ImageButton-->
-    <!--                android:id="@+id/btn_del"-->
-    <!--                style="@style/button_style"-->
-    <!--                app:srcCompat="@drawable/ic_backspace" />-->
-
-    <!--        </TableRow>-->
-
-    <!--    </TableLayout>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
