--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="btn_width">80dp</dimen>
     <dimen name="btn_height">40dp</dimen>
+    <dimen name="btn_margin">2dp</dimen>
     <dimen name="normal_text_size">20sp</dimen>
     <dimen name="large_text_size">32sp</dimen>
     <dimen name="value_txt_height">40dp</dimen>
