--- a/app/src/main/res/layout/product_item3.xml
+++ b/app/src/main/res/layout/product_item3.xml
@@ -23,20 +23,20 @@
 
             android:textSize="28sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/item_price_per_one_tenth"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/item_cur_price"
+            app:layout_constraintTop_toTopOf="@+id/item_price_per_one"
             tools:text="#1" />
 
         <TextView
             android:id="@+id/item_cur_price"
             style="@style/text_style"
             android:layout_width="0dp"
-            android:layout_marginStart="12dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="12dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/guideline"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/item_number"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="800p./750g" />
 
@@ -44,9 +44,9 @@
             android:id="@+id/item_price_per_one"
             style="@style/text_style"
             android:layout_width="0dp"
+            android:layout_marginStart="12dp"
             app:layout_constraintEnd_toStartOf="@+id/guideline"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/item_cur_price"
+            app:layout_constraintStart_toEndOf="@+id/item_number"
             app:layout_constraintTop_toBottomOf="@+id/item_cur_price"
             tools:text="1200p./1kg" />
 
@@ -55,8 +55,7 @@
             style="@style/text_style"
             android:layout_width="0dp"
             app:layout_constraintEnd_toStartOf="@+id/guideline"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/item_cur_price"
+            app:layout_constraintStart_toStartOf="@+id/item_price_per_one"
             app:layout_constraintTop_toBottomOf="@+id/item_price_per_one"
             tools:text="1200p./1kg" />
 
@@ -67,8 +66,7 @@
             android:layout_marginBottom="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/item_cur_price"
+            app:layout_constraintStart_toStartOf="@+id/item_price_per_half"
             app:layout_constraintTop_toBottomOf="@+id/item_price_per_half"
             app:layout_constraintVertical_bias="0.0"
             tools:text="1200p./1kg" />
@@ -122,11 +120,9 @@
             android:id="@+id/item_thumb"
             android:layout_width="45dp"
             android:layout_height="40dp"
-            app:layout_constraintBottom_toBottomOf="@+id/item_price_per_one_tenth"
-            app:layout_constraintEnd_toEndOf="@+id/item_number"
-            app:layout_constraintStart_toStartOf="@+id/item_number"
-            app:layout_constraintTop_toBottomOf="@+id/item_price_per_one"
-            app:srcCompat="@drawable/ic_thumb_up" />
+            app:srcCompat="@drawable/ic_thumb_up"
+            tools:layout_editor_absoluteX="238dp"
+            tools:layout_editor_absoluteY="53dp" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
