--- a/app/src/main/res/drawable/max_price_background.xml
+++ b/app/src/main/res/drawable/max_price_background.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+    <solid android:color="@color/colorBackgroundCard"/>
     <stroke android:color="@android:color/holo_red_dark"/>
     <stroke android:width="3dp"/>
-    <corners android:radius="2dp"/>
+    <corners android:radius="@dimen/card_radius"/>
 </shape>
