--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/product_item" />
+        tools:listitem="@layout/product_item2" />
 
     <View
         android:id="@+id/horizontal_divider"
@@ -169,11 +169,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="4dp"
-        android:background="@drawable/unselected_txt_back"
+        android:background="@drawable/selected_txt_back"
         android:gravity="center"
-        app:layout_constraintEnd_toEndOf="@+id/linear_layout"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toTopOf="@+id/txt_amount"
+        app:layout_constraintBottom_toTopOf="@+id/linear_layout"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintStart_toStartOf="@+id/linear_layout"
         tools:text="12345 ₽" />
 
 
@@ -183,16 +183,16 @@
         android:layout_height="@dimen/value_txt_height"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/selected_txt_back"
+        android:background="@drawable/unselected_txt_back"
         android:clickable="true"
         android:focusable="true"
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="?android:textColorPrimary"
         android:textSize="@dimen/normal_text_size"
-        app:layout_constraintBottom_toTopOf="@+id/linear_layout"
-        app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintStart_toStartOf="@+id/linear_layout"
+        app:layout_constraintEnd_toEndOf="@+id/linear_layout"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toTopOf="@+id/txt_price"
         tools:text="12345 kg" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -217,3 +217,5 @@
         app:layout_constraintVertical_bias="0.49" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
