--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="normal_text_size">20sp</dimen>
     <dimen name="large_text_size">32sp</dimen>
     <dimen name="value_txt_height">40dp</dimen>
+    <dimen name="card_radius">8dp</dimen>
 </resources>
