Translate to Russian. Finished

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,7 +71,7 @@
             <TextView
                 android:id="@+id/btn_measure_unit"
                 style="@style/button_style"
-                android:text="Unt" />
+                android:text="@string/btn_unit_title" />
 
         </LinearLayout>
 
