Cleaning up. Finished

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -170,7 +170,6 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="4dp"
         android:background="@drawable/selected_txt_back"
-        android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/linear_layout"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintStart_toStartOf="@+id/linear_layout"
@@ -179,17 +178,12 @@
 
     <TextView
         android:id="@+id/txt_amount"
+        style="@style/price_and_amount_style"
         android:layout_width="0dp"
         android:layout_height="@dimen/value_txt_height"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/unselected_txt_back"
-        android:clickable="true"
-        android:focusable="true"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:textColor="?android:textColorPrimary"
-        android:textSize="@dimen/normal_text_size"
         app:layout_constraintEnd_toEndOf="@+id/linear_layout"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="@+id/txt_price"
