--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,7 @@
 
 
             <LinearLayout
+                android:id="@+id/keyboard_first_row"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -78,6 +79,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/keyboard_second_row"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -105,6 +107,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/keyboard_third_row"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -132,6 +135,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/keyboard_forth_row"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -152,11 +156,11 @@
                     style="@style/button_style"
                     app:srcCompat="@drawable/ic_backspace" />
 
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_margin="2dp"
-                    android:layout_weight="1" />
+                <ImageView
+                    android:id="@+id/btn_hide_keyboard"
+                    android:scaleType="center"
+                    style="@style/button_style"
+                    app:srcCompat="@drawable/ic_keyboard_hide" />
 
             </LinearLayout>
 
