--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -238,7 +238,7 @@
 
         <TextView
             android:id="@+id/main_hint_text"
-            style="@style/text_style"
+            style="@style/text_style.normal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/hint_main"
