--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -18,7 +18,7 @@
 
         <TextView
             android:id="@+id/item_number"
-            style="@style/text_style"
+            style="@style/text_style.normal"
             android:layout_marginStart="16dp"
             android:textSize="@dimen/large_text_size"
             android:textStyle="bold"
@@ -28,7 +28,7 @@
 
         <TextView
             android:id="@+id/item_cur_price"
-            style="@style/text_style"
+            style="@style/text_style.normal"
             android:layout_width="0dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="12dp"
@@ -39,7 +39,7 @@
 
         <TextView
             android:id="@+id/item_price_per_one"
-            style="@style/text_style"
+            style="@style/text_style.normal"
             android:layout_width="0dp"
             app:layout_constraintEnd_toStartOf="@+id/guideline"
             app:layout_constraintHorizontal_bias="0.0"
@@ -49,7 +49,7 @@
 
         <TextView
             android:id="@+id/item_price_per_half"
-            style="@style/text_style"
+            style="@style/text_style.normal"
             android:layout_width="0dp"
             app:layout_constraintEnd_toStartOf="@+id/guideline"
             app:layout_constraintHorizontal_bias="0.0"
@@ -59,7 +59,7 @@
 
         <TextView
             android:id="@+id/item_price_per_one_tenth"
-            style="@style/text_style"
+            style="@style/text_style.normal"
             android:layout_width="0dp"
             android:layout_marginBottom="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -72,7 +72,7 @@
 
         <TextView
             android:id="@+id/item_dif_title"
-            style="@style/text_style"
+            style="@style/text_style.normal"
             android:layout_width="0dp"
             android:layout_marginEnd="16dp"
             android:textAlignment="textEnd"
@@ -84,7 +84,7 @@
 
         <TextView
             android:id="@+id/item_dif_per_one"
-            style="@style/text_style"
+            style="@style/text_style.normal"
             android:layout_width="0dp"
             android:textAlignment="textEnd"
             app:layout_constraintEnd_toEndOf="@+id/item_dif_title"
@@ -95,7 +95,7 @@
 
         <TextView
             android:id="@+id/item_dif_per_half"
-            style="@style/text_style"
+            style="@style/text_style.normal"
             android:layout_width="0dp"
             android:textAlignment="textEnd"
             app:layout_constraintEnd_toEndOf="@+id/item_dif_per_one"
@@ -106,7 +106,7 @@
 
         <TextView
             android:id="@+id/item_dif_per_one_tenth"
-            style="@style/text_style"
+            style="@style/text_style.normal"
             android:layout_width="0dp"
             android:textAlignment="textEnd"
             app:layout_constraintEnd_toEndOf="@+id/item_dif_per_half"
