--- a/app/src/main/res/layout/product_item2.xml
+++ b/app/src/main/res/layout/product_item2.xml
@@ -21,7 +21,7 @@
 
                 <TextView
                     android:id="@+id/item_number"
-                    style="@style/text_style"
+                    style="@style/text_style.normal"
                     android:layout_height="1dp"
                     android:width="1dp"
                     android:layout_marginStart="16dp"
@@ -33,7 +33,7 @@
 
         <TextView
             android:id="@+id/item_cur_price"
-            style="@style/text_style"
+            style="@style/text_style.normal"
             android:layout_width="wrap_content"
             android:layout_marginTop="12dp"
             android:textAllCaps="false"
@@ -45,7 +45,7 @@
 
         <TextView
             android:id="@+id/item_price_per_one"
-            style="@style/text_style"
+            style="@style/text_style.normal"
             android:layout_width="0dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
@@ -56,7 +56,7 @@
 
         <TextView
             android:id="@+id/item_price_per_half"
-            style="@style/text_style"
+            style="@style/text_style.normal"
             android:layout_width="0dp"
             app:layout_constraintEnd_toStartOf="@+id/guideline"
             app:layout_constraintStart_toStartOf="@+id/item_price_per_one"
@@ -65,7 +65,7 @@
 
         <TextView
             android:id="@+id/item_price_per_one_tenth"
-            style="@style/text_style"
+            style="@style/text_style.normal"
             android:layout_width="0dp"
             android:layout_marginBottom="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -78,7 +78,7 @@
             android:id="@+id/item_dif_title"
             android:layout_height="1dp"
             android:width="1dp"
-            style="@style/text_style"
+            style="@style/text_style.normal"
             android:textStyle="bold"
             tools:layout_editor_absoluteX="299dp"
             tools:layout_editor_absoluteY="12dp"
@@ -86,7 +86,7 @@
 
         <TextView
             android:id="@+id/item_dif_per_one"
-            style="@style/text_style"
+            style="@style/text_style.normal"
             android:layout_width="0dp"
             android:layout_marginEnd="16dp"
             android:textAlignment="textEnd"
@@ -97,7 +97,7 @@
 
         <TextView
             android:id="@+id/item_dif_per_half"
-            style="@style/text_style"
+            style="@style/text_style.normal"
             android:layout_width="0dp"
             android:textAlignment="textEnd"
             app:layout_constraintEnd_toEndOf="@+id/item_dif_per_one"
@@ -107,7 +107,7 @@
 
         <TextView
             android:id="@+id/item_dif_per_one_tenth"
-            style="@style/text_style"
+            style="@style/text_style.normal"
             android:layout_width="0dp"
             android:textAlignment="textEnd"
             app:layout_constraintEnd_toEndOf="@+id/item_dif_per_half"
