--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="btn_width">80dp</dimen>
     <dimen name="btn_height">40dp</dimen>
     <dimen name="btn_margin">2dp</dimen>
+    <dimen name="small_text_size">18sp</dimen>
     <dimen name="normal_text_size">20sp</dimen>
     <dimen name="large_text_size">32sp</dimen>
     <dimen name="value_txt_height">40dp</dimen>
