--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,7 +25,18 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">?android:textColorPrimary</item>
+    </style>
+
+    <style name="text_style.small">
+        <item name="android:textSize">@dimen/small_text_size</item>
+    </style>
+
+    <style name="text_style.normal">
         <item name="android:textSize">@dimen/normal_text_size</item>
+    </style>
+
+    <style name="text_style.large">
+        <item name="android:textSize">@dimen/large_text_size</item>
     </style>
 
     <style name="price_and_amount_style">
